Update blendschedule styling.

--- a/app/core/templates/core/blendschedules/allschedules.html
+++ b/app/core/templates/core/blendschedules/allschedules.html
@@ -1,6 +1,7 @@
 <ul class="nav nav-tabs nav-fill">
     <li class="nav-item">
         <a href="#horixContainer" class="nav-link active" data-bs-toggle="tab">Horix</a>
+        <div class="underlineDiv"></div>
     </li>
     <li class="nav-item">
         <a href="#drumsContainer" class="nav-link" data-bs-toggle="tab">Drums</a>
@@ -20,21 +21,21 @@
 </ul>
 <div class="tab-content">
     <div class="tab-pane fade show active" id="horixContainer">
-        {% include 'core/blendschedules/horixschedule.html' %}
+        <br>{% include 'core/blendschedules/horixschedule.html' %}
     </div>
     <div class="tab-pane fade show" id="drumsContainer">
-        {% include 'core/blendschedules/drumschedule.html' %}
+        <br>{% include 'core/blendschedules/drumschedule.html' %}
     </div>
     <div class="tab-pane fade show" id="desk1Container">
-        {% include 'core/blendschedules/deskoneschedule.html' %}
+        <br>{% include 'core/blendschedules/deskoneschedule.html' %}
     </div>
     <div class="tab-pane fade show" id="desk2Container">
-        {% include 'core/blendschedules/desktwoschedule.html' %}
+        <br>{% include 'core/blendschedules/desktwoschedule.html' %}
     </div>
     <div class="tab-pane fade show" id="totesContainer">
-        {% include 'core/blendschedules/toteschedule.html' %}
+        <br>{% include 'core/blendschedules/toteschedule.html' %}
     </div>
     <div class="tab-pane fade show" id="pailsContainer">
-        {% include 'core/blendschedules/pailschedule.html' %}
+        <br>{% include 'core/blendschedules/pailschedule.html' %}
     </div>
 </div>
