--- a/app/core/templates/core/inventorycounts/countrecords.html
+++ b/app/core/templates/core/inventorycounts/countrecords.html
@@ -26,6 +26,7 @@
                         <th scope="col">Expected Qty</th>
                         <th scope="col">Counted Qty</th>
                         <th scope="col">Date Counted</th>
+                        <th scope="col">Counted</th>
                         <th scope="col">Variance</th>
                         <th scope="col"></th>
                     </tr>
@@ -41,6 +42,7 @@
                         <td>{{ item.expected_quantity|floatformat:0 }}</td>
                         <td>{{ item.counted_quantity|floatformat:0 }}</td>
                         <td>{{ item.counted_date|date:"M d, Y" }}</td>
+                        <td>{{ item.counted }}</td>
                         <td>{{ item.variance|floatformat:0 }}</td>
                         <td class="text-center">
                             <button dataItemID="{{ item.id }}" type="button" class="btn btn-secondary editBtn" data-bs-toggle="modal" data-bs-target="#editCountRecordsModal">
