--- a/app/core/templates/core/productionblendruns.html
+++ b/app/core/templates/core/productionblendruns.html
@@ -33,16 +33,16 @@
                         <th scope="col">Run Qty</th>
                         <th scope="col">Qty On Hand</th>
                         <th scope="col">Start Time</th>
-                        <th scope="col" style="display:flex; vertical-align: middle;">
-                            Line 
+                        <th scope="col" class="filterColumnHeader">
+                            <p class="filterColumnHeaderP">Line</p>
                             <div class="dropdown">
-                                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="dropdown-toggle filterButton" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                     {% if prod_line_filter %}
                                         <i class="fa-solid fa-filter"></i>
                                     {% else %}
-                                        <i class="fa-light fa-filter"></i>
+                                        <i class="fas fa-filter"></i>
                                     {% endif %}
-                                </button>
+                                </a>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                     <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1&prod-line-filter=INLINE">
                                         INLine
@@ -60,9 +60,9 @@
                                         Oil Line
                                     </a></li>
                                     <li><hr class="dropdown-divider"></li>
-                                    <li><b style="color:red;"><a class="dropdown-item" href="/core/production-blend-runs/?page=1">
+                                    <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">
                                         Remove Filter
-                                    </a></b></li>
+                                    </a></li>
                                 </ul>
                             </div>
                         </th>
