--- a/app/core/templates/core/blendschedules/horixschedule.html
+++ b/app/core/templates/core/blendschedules/horixschedule.html
@@ -24,7 +24,13 @@
                     <td>{{ item.run_date|date:"M d, Y" }}</td>
                     {% if user.is_staff %}
                         <td class="text-center lotNumCell">
-                            <button class="btn btn-secondary lotNumButton" data-desk="Horix" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" data-itemcode="{{ item.component_item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
+                            <button class="btn btn-secondary lotNumButton" data-desk="Horix" 
+                            data-bs-toggle="modal" data-bs-target="#addLotNumModal" 
+                            data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" 
+                            data-itemcode="{{ item.component_item_code }}" 
+                            data-desc="{{ item.component_item_description }}" 
+                            data-threewkqty="{{ item.gallonqty }}"
+                            >+</button>
                         </td>
                     {% endif %}
                 </tr>
