--- a/app/core/static/core/css/blendShortages.css
+++ b/app/core/static/core/css/blendShortages.css
@@ -24,6 +24,10 @@ tr[needsCount="needsCount"] {
     margin-left: 15px;
 }
 
+.unscheduledDropdown {
+    color: rgb(86, 86, 86);
+}
+
 @keyframes blinkingBackground{
     0%		{ background-color: #ff9500;}
     25%		{ background-color: #ffe521;}
