--- a/app/core/templates/core/inventorycounts/upcomingblends.html
+++ b/app/core/templates/core/inventorycounts/upcomingblends.html
@@ -14,7 +14,6 @@
         <br/>
         <button id="create_list">Create Count List</button>
         <br/>
-
     </div>
     <div id="selection_table" class="table-responsive-sm">
         <br/>
@@ -59,8 +58,8 @@
                             </div>
                         </td>
                         <td>{{ item.item_description }}</td>
-                        <td>{{ item.starttime|floatformat:2 }}</td>
-                        <td>{{ item.expected_on_hand|floatformat:2 }}</td>
+                        <td>{{ item.start_time|floatformat:2 }}</td>
+                        <td>{{ item.expected_quantity|floatformat:2 }}</td>
                         <td>{{ item.last_count_quantity|floatformat:0 }}: {{ item.last_count_date|date:"m-d-y" }}</td>
                         <td>{{ item.last_transaction_code }}: {{ item.last_transaction_date|date:"m-d-y" }}</td>
                         <td>
