--- a/app/templates/navbars/blend-crew-navbar-items.html
+++ b/app/templates/navbars/blend-crew-navbar-items.html
@@ -15,7 +15,8 @@
         <li><a class="dropdown-item" href="/core/chemical-shortages">Chemical Shortages</a></a>
         <li><a class="dropdown-item" href="/core/blend-shortages">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
-        <li><a class="dropdown-item" href="/core/upcoming-counts">Blend Count Sheets</a></li>
+        <li><a class="dropdown-item" href="/core/upcoming-blend-counts">Blend Count Sheets</a></li>
+        <li><a class="dropdown-item" href="/core/upcoming-component-counts">Component Count Sheets</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=all">Scheduled Blends</a></li>
