Set count_type field for components and blends.

--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -62,7 +62,7 @@
     {% endif %}
         <div id="addBlendButtonContainer" class="buttonContainer noPrint">
             <button id="modalToggle" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCountListItemModal">
-                Add A Blend
+                Add A Count
             </button>
         </div>
 
@@ -72,6 +72,6 @@
 
 
 {% block belowdeckscripts %}
-    <script type="module" src="{% static 'core/js/pageModules/blendCountList.js' %}"></script>
+    <script type="module" src="{% static 'core/js/pageModules/countList.js' %}"></script>
     
 {% endblock %}
