--- a/app/core/templates/core/inventorycounts/upcomingcomponents.html
+++ b/app/core/templates/core/inventorycounts/upcomingcomponents.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}<title>Upcoming Blends</title>{% endblock %}
+{% block title %}<title>Select Counts</title>{% endblock %}
 {% block scripts %}
     <link rel="stylesheet" type="text/css" href ="{% static 'core/upcomingBlends.css' %}">
 {% endblock %}
