--- a/app/core/templates/core/inventorycounts/upcomingblends.html
+++ b/app/core/templates/core/inventorycounts/upcomingblends.html
@@ -30,6 +30,47 @@
                     <th scope="col" class='text-center'>Shortage</th>
                 </tr>
             </thead>
+            {% for item in blends_made_recently %}
+                    <tr {% if item.needs_count %} style="background-color:rgb(250, 189, 109)" {% endif %}>
+                        <td class='text-center'>
+                            <input type="checkbox" name={{ item.item_code }}></input>
+                        </td>
+                        <td>
+                            <div class="dropdown">
+                                <button class="btn dropdown-toggle blendinfo" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa fa-info-circle"></i>
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                    <li><a class="dropdown-item" href="/core/create-report/Lot-Numbers/{{ item.item_code }}">
+                                        Lot Numbers
+                                    </a></li>
+                                    <li><a class="dropdown-item" href="/core/create-report/Transaction-History/{{ item.item_code }}">
+                                        Transaction History
+                                    </a></li>
+                                    <li><a class="dropdown-item" href="/core/create-report/All-Upcoming-Runs/{{ item.item_code }}">
+                                        Upcoming Runs
+                                    </a></li>
+                                    <li><a class="dropdown-item" href="/core/create-report/Count-History/{{ item.item_code }}">
+                                        Count History
+                                    </a></li>
+                                </ul>
+                                {{ item.item_code }}
+                            </div>
+                        </td>
+                        <td>{{ item.item_description }}</td>
+                        <td>{{ item.start_time|floatformat:2 }}</td>
+                        <td>{{ item.expected_quantity|floatformat:2 }}</td>
+                        <td>{{ item.last_count_quantity|floatformat:0 }}: {{ item.last_count_date|date:"m-d-y" }}</td>
+                        <td>{{ item.last_transaction_code }}: {{ item.last_transaction_date|date:"m-d-y" }}</td>
+                        <td>
+                            {% if item.short_hour == 0 %}
+                                No
+                            {% else %}
+                                {{ item.short_hour|floatformat:2 }}
+                            {% endif %}
+                        </td>
+                    </tr>                
+            {% endfor %}
             {% for item in upcoming_blends %}
                     <tr {% if item.needs_count %} style="background-color:rgb(250, 189, 109)" {% endif %}>
                         <td class='text-center'>
