Correct column name on counts report.

--- a/app/core/templates/core/inventorycounts/finishedcounts.html
+++ b/app/core/templates/core/inventorycounts/finishedcounts.html
@@ -15,7 +15,7 @@
         <table class="table text-left table-bordered" id="countsTable">
             <thead class="thead-dark">
                 <tr>
-                    <th scope="col">Blend</th>
+                    <th scope="col">Item Code</th>
                     <th scope="col">Description</th>
                     <th scope="col">Expected Qty</th>
                     <th scope="col">Counted Qty</th>
