--- a/app/templates/navbars/blend-crew-navbar-items.html
+++ b/app/templates/navbars/blend-crew-navbar-items.html
@@ -22,6 +22,17 @@
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=all">Scheduled Blends</a></li>
     </ul>
 </li>
+<li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Item Lookup
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="itemLookupNavbarDropdown">
+        <li><a class="dropdown-item" href="/core/lookup-item-quantity/">Item Quantity</a></li>
+        <li><a class="dropdown-item" href="/core/lookup-location/">Chemical Location</a></li>
+        <li><a class="dropdown-item" href="/core/lookup-lot-numbers/">Lot Numbers</a></li>
+        <li><a class="dropdown-item" href="/prodverse/spec-sheet-lookup/">Spec Sheets</a></li>
+    </ul>
+</li>
 <li class="nav-item">
     <a class="nav-link" href="/prodverse/production-schedule">Production Schedule</a>
 </li>
