--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -27,10 +27,9 @@
                     <th scope="col" class="text-center">Description</th>
                     <th scope="col" class="text-center">Last Count</th>
                     <th scope="col" class="text-center">Last Txn</th>
-                    <th scope="col" class="text-center">When Short</th>
+                    <th scope="col" class="text-center">First Shortage</th>
                     <th scope="col" class="text-center">Line</th>
-                    <th scope="col" class="text-center">SCHEDULED Shortages</th>
-                    <th scope="col" class="text-center">UNSCHEDULED Shortages</th>
+                    <th scope="col" class="text-center">Total Shortage</th>
                     {% if user.is_staff %}
                         <th scope="col">Lot Number</th>
                     {% endif %}
@@ -87,43 +86,18 @@
                             <b>{{ item.last_txn_code }}</b>
                         {% endif %}
                     </td>
-                    <td>{{ item.starttime|floatformat:2 }}</td>
-                    <td>{{ item.prodline }}</td>
+                    <td>{{ item.start_time|floatformat:2 }}</td>
+                    <td>{{ item.prod_line }}</td>
                     <td>
-                        <span title="1Wk: {{ item.one_wk_short|floatformat:2 }}&#13;2Wks: {{ item.two_wk_short|floatformat:2 }}&#13;3Wks: {{ item.three_wk_short|floatformat:2 }}">
-                            {{ item.three_wk_short|floatformat:2 }} gal
+                        <span title="1Wk: {{ item.one_wk_short|floatformat:2 }}&#13;2Wks: {{ item.two_wk_short|floatformat:2 }}&#13;3Wks: {{ item.three_wk_short|floatformat:2 }}&#13;Unscheduled: {{ item.unscheduled_short|floatformat:2 }}">
+                            {{ item.total_shortage|floatformat:2 }} gal
                         </span>
-                    </td>
-                    <td>
-                        {% if item.unscheduled_quantities %}
-                        
-                            <div class="dropdown">
-                                <a class="dropdown-toggle unscheduledDropdown" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <em> {{ item.unscheduled_quantities.total|floatformat:2 }} gal</em>
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li class="dropdownLi">{% if item.unscheduled_quantities.JANUARY %}JANUARY: {{ item.unscheduled_quantities.JANUARY }}{% endif %}</li>
-                                    <li class="dropdownLi">{% if item.unscheduled_quantities.FEBRUARY %}FEBRUARY: {{ item.unscheduled_quantities.FEBRUARY }}{% endif %}</li>
-                                    <li class="dropdownLi">{% if item.unscheduled_quantities.MARCH %}MARCH: {{ item.unscheduled_quantities.MARCH }}{% endif %}</li>
-                                    <li class="dropdownLi">{% if item.unscheduled_quantities.APRIL %}APRIL: {{ item.unscheduled_quantities.APRIL }}{% endif %}</li>
-                                    <li class="dropdownLi">{% if item.unscheduled_quantities.MAY %}MAY: {{ item.unscheduled_quantities.MAY }}{% endif %}</li>
-                                    <li class="dropdownLi">{% if item.unscheduled_quantities.JUNE %}JUNE: {{ item.unscheduled_quantities.JUNE }}{% endif %}</li>
-                                    <li class="dropdownLi">{% if item.unscheduled_quantities.JULY %}JULY: {{ item.unscheduled_quantities.JULY }}{% endif %}</li>
-                                    <li class="dropdownLi">{% if item.unscheduled_quantities.AUGUST %}AUGUST: {{ item.unscheduled_quantities.AUGUST }}{% endif %}</li>
-                                    <li class="dropdownLi">{% if item.unscheduled_quantities.SEPTEMBER %}SEPTEMBER: {{ item.unscheduled_quantities.SEPTEMBER }}{% endif %}</li>
-                                    <li class="dropdownLi">{% if item.unscheduled_quantities.OCTOBER %}OCTOBER: {{ item.unscheduled_quantities.OCTOBER }}{% endif %}</li>
-                                    <li class="dropdownLi">{% if item.unscheduled_quantities.NOVEMBER %}NOVEMBER: {{ item.unscheduled_quantities.NOVEMBER }}{% endif %}</li>
-                                    <li class="dropdownLi">{% if item.unscheduled_quantities.DECEMBER %}DECEMBER: {{ item.unscheduled_quantities.DECEMBER }}{% endif %}</li>
-                                </ul>
-                            </div>
-                        {% else %}
-                        {% endif %}
                     </td>
                     <td class="text-center lotNumCell">
                         <button class="btn btn-secondary lotNumButton" 
                             data-bs-toggle="modal" data-bs-target="#addLotNumModal" 
                             data-itemcode="{{ item.component_item_code }}" data-desc="{{ item.component_item_description }}" 
-                            data-threewkqty="{{ item.three_wk_short }}" data-line="Prod" data-desk="Desk_1">
+                            data-threewkqty="{{ item.total_shortage }}" data-line="Prod" data-desk="Desk_1">
                             +
                         </button>
                     </td>
