--- a/app/core/templates/core/componentshortages.html
+++ b/app/core/templates/core/componentshortages.html
@@ -23,7 +23,7 @@
     <div class="tab-content">
         <div class="tab-pane fade show active" id="componentShortContainer">
             <div class="table-responsive-sm">
-                <table class="table text-left table-bordered">
+                <table class="table text-left table-bordered table-hover">
                     <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                         <tr>
                             <th scope="col">Item</th>
