--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -16,7 +16,7 @@
             <form action="" method=POST>
                 {% csrf_token %}
                 <div class="table-responsive-sm">
-                    <table class="table text-left table-bordered">
+                    <table class="table text-left table-bordered table-hover">
                         <thead class="thead-dark">
                             <tr>
                                 <th scope="col" class="text-center">Item Code</th>
