--- a/app/core/templates/core/inventorycounts/upcomingcomponents.html
+++ b/app/core/templates/core/inventorycounts/upcomingcomponents.html
@@ -17,7 +17,7 @@
     </div>
     <div id="selection_table" class="table-responsive-sm">
         <br/>
-        <table class="table text-left table-bordered">
+        <table class="table text-left table-bordered table-hover">
             <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                 <tr>
                     <th scope="col" class='text-center'>Add to Count List</th>
