--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -34,7 +34,7 @@
 
     <br/><br/>
     <div class="table-responsive-sm">
-        <table class="table text-left table-bordered">
+        <table class="table text-left table-bordered table-hover">
             <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                 <tr>
                     <th scope="col" class='text-center'></th>
