Add po_number filtering to component shortages.

--- a/app/core/templates/core/componentshortages.html
+++ b/app/core/templates/core/componentshortages.html
@@ -48,9 +48,8 @@
                             <td>{{ shortage.prod_line }}</td>
                             <td>{{ shortage.total_shortage|floatformat:2 }}</td>
                             <td>{{ shortage.component_on_hand_qty|floatformat:4 }}</td>
-                            <td>Coming soon !</td>
-                            <td>Coming soon !</td>
-
+                            <td>{{ shortage.total_shortage|floatformat:2 }}</td>
+                            <td>{{ shortage.next_order_due }}</td>
                         </tr>
                     {% endfor %}
                 </table>
@@ -84,8 +83,7 @@
                             <td>{{ shortage.subcomponent_onhand_qty|floatformat:4 }} {{ shortage.standard_uom }}</td>
                             <td>{{ shortage.total_subcomponent_shortage|floatformat:2 }} {{ shortage.standard_uom }}</td>
                             <td>{{ shortage.max_possible_blend|floatformat:2 }}</td>
-                            <td>Coming soon !</td>
-
+                            <td>{{ shortage.next_order_due }}</td>
                         </tr>
                     {% endfor %}
                 </table>
