--- a/app/core/templates/core/subcomponentshortages.html
+++ b/app/core/templates/core/subcomponentshortages.html
@@ -1,50 +1,51 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}<title>Blend Shortages</title>{% endblock %}
+{% block title %}<title>Blend Component Shortages</title>{% endblock %}
 
 {% block scripts %}
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/blendShortages.css' %}">
     <script type="module" src="{% static 'core/js/pageModules/componentShortages.js' %}"></script>
 {% endblock scripts %}
+    
 
 {% block content %}
-    <h1>Component Shortages</h1>
-        <tr id="itemCodeRow">
-            <td>
-                <label for="id_item_code">Filter By PO Number:</label>
-            </td>
-            <td>
-                <input type="text" name="po_number" maxlength="100" required="" id="id_po_number" class="ui-autocomplete-input" autocomplete="off">
-            </td>
-        </tr>
+    <tr id="itemCodeRow">
+        <td>
+            <label for="id_item_code">Filter By PO Number:</label>
+        </td>
+        <td>
+            <input type="text" name="po_number" maxlength="100" required="" id="id_po_number" class="ui-autocomplete-input" autocomplete="off">
+        </td>
+    </tr>
+    <h1>Blend Component Shortages</h1>
         <div class="table-responsive-sm">
-            <table class="table text-left table-bordered table-hover" id="shortageTable">
+            <table class="table text-left table-bordered" id="shortageTable">
                 <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                     <tr>
-                        <th scope="col">Item</th>
+                        <th scope="col">Blend</th>
                         <th scope="col">PO</th>
                         <th scope="col">CompItemCode</th>
                         <th scope="col">Component Description</th>
                         <th scope="col">Start Time</th>
                         <th scope="col">Line</th>
-                        <th scope="col">Shortage</th>
                         <th scope="col">On Hand</th>
+                        <th scope="col">Shortage</th>
                         <th scope="col">Max Prod. Qty</th>
                         <th scope="col">Next Order Due</th>
                     </tr>
                 </thead>
-                {% for shortage in component_shortages %}
-                    <tr class="shortageRow">
+                {% for shortage in subcomponent_shortages %}
+                    <tr>
                         <td>{{ shortage.item_code }}</td>
                         <td>{{ shortage.po_number }}</td>
-                        <td>{{ shortage.component_item_code }}</td>
+                        <td>{{ shortage.subcomponent_item_code }}</td>
                         <td>{{ shortage.component_item_description }}</td>
                         <td>{{ shortage.start_time|floatformat:2 }}</td>
                         <td>{{ shortage.prod_line }}</td>
-                        <td>{{ shortage.total_shortage|floatformat:2 }}</td>
-                        <td>{{ shortage.component_on_hand_qty|floatformat:4 }}</td>
-                        <td>{{ shortage.total_shortage|floatformat:2 }}</td>
+                        <td>{{ shortage.subcomponent_onhand_qty|floatformat:4 }} {{ shortage.standard_uom }}</td>
+                        <td>{{ shortage.total_subcomponent_shortage|floatformat:2 }} {{ shortage.standard_uom }}</td>
+                        <td>{{ shortage.max_possible_blend|floatformat:2 }}</td>
                         <td>{{ shortage.next_order_due }}</td>
                     </tr>
                 {% endfor %}
