--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -26,7 +26,8 @@
         Blend Auditing
     </a>
     <ul class="dropdown-menu" aria-labelledby="blendAuditingNavbarDropdown">
-        <li><a class="dropdown-item" href="/core/chemical-shortages">Chemical Shortages</a></li>
+        <li><a class="dropdown-item" href="/core/component-shortages">ALL Component Shortages</a></li>
+        <li><a class="dropdown-item" href="/core/subcomponent-shortages">Blend Component Shortages</a></li>
         <li><a class="dropdown-item" href="/core/blend-shortages">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
         <li><a class="dropdown-item" href="/core/upcoming-blend-counts">Blend Count Sheets</a></li>
