--- a/app/templates/navbars/office-navbar-items.html
+++ b/app/templates/navbars/office-navbar-items.html
@@ -8,12 +8,14 @@
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Blend Auditing
     </a>
-    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="/core/chemical-shortages">Chemical Shortages</a></li>
+    <ul class="dropdown-menu" aria-labelledby="blendAuditingNavbarDropdown">
+        <li><a class="dropdown-item" href="/core/component-shortages">ALL Component Shortages</a></li>
+        <li><a class="dropdown-item" href="/core/subcomponent-shortages">Blend Component Shortages</a></li>
         <li><a class="dropdown-item" href="/core/blend-shortages">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
         <li><a class="dropdown-item" href="/core/upcoming-blend-counts">Blend Count Sheets</a></li>
         <li><a class="dropdown-item" href="/core/upcoming-component-counts">Component Count Sheets</a></li>
+        <li><a class="dropdown-item" href="/core/blend-statistics">Blend Statistics</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=all">Scheduled Blends</a></li>
